--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-animatable": "^1.3.2",
     "react-native-vector-icons": "^4.4.2"
   },
   "devDependencies": {
